########################
Nagios Core 4 Change Log
########################

4.5.9 - 2024-XX-XX
------------------
* Fix unreachable notifications (Dylan Anderson)
* Fix authentication in trends.cgi (Dylan Anderson)

4.5.8 - 2024-11-19
------------------
* Improve new exfoliation theme and add back in PID information (Dylan Anderson)
* Fix issues with downtimes that are both flexible and triggered and improve downtime additions in general (#595) (Dylan Anderson)

4.5.7 - 2024-10-24
------------------
* Expand the custom variable macros to an empty string, if the custom variable does not exist (Andre Klärner)
* Fix notification logic to not send a notification if a host and services parents are down (#873) (Dylan Anderson)
* Update Exfoliation theme (Dylan Anderson)

4.5.6 - 2024-10-08
------------------
* Send a recovery notification if the object recovered while flapping (#847) (Dylan Anderson)
* Fix for separate build directory & a couple small cleanups (Doug Nazar)
* Update tutorial links in Readme (Igor Udot)

4.5.5 - 2024-09-17
------------------
* Update configure scripts using newer versions of autotools (Dylan Anderson)
* Disable maintainer mode for TAP testing and add Github Actions (Dylan Anderson)

4.5.4 - 2024-08-14
------------------
* Fix inconsistent links for 'View {Trends,Alert Histogram} For This {Host,Service}' (Mauricio Faria de Oliveira)
* Fix broken links from removing AngularJS pages in 4.5.3 (Dylan Anderson)

4.5.3 - 2024-06-11 
------------------
* Update jQuery (#960) (Dylan Anderson)   
* Remove pages using outdated AngularJS framework (#960) (Dylan Anderson)
* Fix html encoding of some ascii characters (#813) (Dylan Anderson)
* Updated several page links to use 'nofollow' (#965) - (Griffin Westerman)

4.5.2 - 2024-04-30
------------------
* Fix handling of timeperiods w/ downtime availability calculations in the Availability CGI report (Sebastian Wolf)
* Fix build when compiling against musl libc (#952) (Sebastian Wolf)