@@ -73,6 +73,19 @@ body.navbar a:hover,a:active {
 	margin: 0 0 10px 0;
 	}
 
+.nlogo {
+  mask: url(../images/logos/nagios-n-logo.svg) no-repeat center / contain;
+  height: 32px;
+  background-color: #000;
+}
+
+.fulllogo {
+  mask: url(../images/logos/horizontal-nagios-full-logo.svg) no-repeat center / contain;
+  height: 39px;
+  width: 140px;
+  background-color: #FFF;
+}
+
 .navsection {
 	margin: 5px 0 10px 0;
 	/*color: #AAA; */
